@@ -1,6 +1,11 @@
 2014-08-15  kitone  <kitone@gna.org>
 
 	* src/gui/application.cc:
+	Fix show/hide of player/waveform after porting to gtk3.
+
+2014-08-15  kitone  <kitone@gna.org>
+
+	* src/gui/application.cc:
 	* src/gui/application.h:
 	Fix bug #22471 : Drag and drop of keyframe and waveform files.
 
